[gd_scene load_steps=5 format=3 uid="uid://beirk0bt486wl"]

[ext_resource type="Script" path="res://world/hud/line_chart/line_plot.gd" id="1_gan5o"]
[ext_resource type="Script" path="res://world/hud/line_chart/line_chart.gd" id="1_k4rao"]

[sub_resource type="LabelSettings" id="LabelSettings_026nw"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_bybn6"]
font_size = 10

[node name="LineChart" type="PanelContainer"]
custom_minimum_size = Vector2(200, 150)
script = ExtResource("1_k4rao")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TÃ­tulo"
label_settings = SubResource("LabelSettings_026nw")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LinePlot" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_gan5o")

[node name="CurrentValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "12.1"
label_settings = SubResource("LabelSettings_bybn6")
vertical_alignment = 1
